--- a/index.ipynb
+++ b/index.ipynb
@@ -115,37 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['categories',\n",
-       " 'coordinates',\n",
-       " 'display_phone',\n",
-       " 'distance',\n",
-       " 'id',\n",
-       " 'image_url',\n",
-       " 'is_closed',\n",
-       " 'location',\n",
-       " 'name',\n",
-       " 'phone',\n",
-       " 'price',\n",
-       " 'rating',\n",
-       " 'review_count',\n",
-       " 'transactions',\n",
-       " 'url']"
+       "dict_keys(['categories', 'coordinates', 'display_phone', 'distance', 'id', 'image_url', 'is_closed', 'location', 'name', 'phone', 'price', 'rating', 'review_count', 'transactions', 'url'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fork_fig.keys()\n",
-    "list(fork_fig.keys())"
+    "fork_fig.keys()\n"
    ]
   },
   {
