--- a/index.ipynb
+++ b/index.ipynb
@@ -155,8 +155,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        return restaurant['name']\n",
-    "    return alternative['name']"
+    "        return res"
    ]
   },
   {
