--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if lerestaurant('price') "
+    "    if len(restaurant('price')) < "
    ]
   },
   {
