automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "    opened_rest = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            \n",
+    "            opened_rest.append()\n",
     "    \n",
     "        "
    ]
