--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "    opened_rest = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            opened_rest.append()\n",
+    "            opened_rest.append(restaurant)\n",
+    "        retu\n",
     "    \n",
     "        "
    ]
